bbss218/force-app/main/default/objects/Opportunity/fields/Aborted_Reason__c.field-meta.xml
<CustomField>
    <fullName>Aborted_Reason__c</fullName>
    <label>Aborted Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>