bbss218/force-app/main/default/objects/Opportunity/fields/Account_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Approval_Status__c</fullName>
    <formula>TEXT( Account.Account_Approval_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Approval Status</label>
    <type>Text</type>
</CustomField>