bbss218/force-app/main/default/objects/Opportunity/fields/Annual_Contract_Value_ACV__c.field-meta.xml
<CustomField>
    <fullName>Annual_Contract_Value_ACV__c</fullName>
    <label>Annual Contract Value (ACV)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>