bbss218/force-app/main/default/objects/Opportunity/fields/Approver_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Approver_Rejection_Reason__c</fullName>
    <label>Approver Rejection Reason</label>
    <length>150</length>
    <type>Text</type>
</CustomField>