bbss218/force-app/main/default/objects/Opportunity/fields/Expected_Design_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Design_Date__c</fullName>
    <label>Expected Design Date</label>
    <type>Date</type>
</CustomField>