bbss218/force-app/main/default/objects/Opportunity/fields/High_Level_Requirements__c.field-meta.xml
<CustomField>
    <fullName>High_Level_Requirements__c</fullName>
    <label>High-Level Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>