bbss218/force-app/main/default/objects/Opportunity/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <label>Lead ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>