bbss218/force-app/main/default/objects/Opportunity/fields/Lost_Against__c.field-meta.xml
<CustomField>
    <fullName>Lost_Against__c</fullName>
    <label>Lost Against</label>
    <length>255</length>
    <type>Text</type>
</CustomField>