bbss218/force-app/main/default/objects/Opportunity/fields/Notes_if_any__c.field-meta.xml
<CustomField>
    <fullName>Notes_if_any__c</fullName>
    <label>Notes (if any)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>