bbss218/force-app/main/default/objects/Opportunity/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <label>On Hold Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>