bbss218/force-app/main/default/objects/Opportunity/fields/Opportunity_ID_custom__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID_custom__c</fullName>
    <formula>IF(
  Account.Name &lt;&gt; &apos;&apos;, 
  Account.Name &amp; &quot;-&quot; &amp; TEXT(YEAR(TODAY())) &amp; &quot;-&quot; &amp; Opportunity_ID__c, 
  &quot;None-&quot; &amp; TEXT(YEAR(TODAY())) &amp; &quot;-&quot; &amp; Opportunity_ID__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ID</label>
    <type>Text</type>
</CustomField>