bbss218/force-app/main/default/objects/Opportunity/fields/Opportunity_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Lost_Reason__c</fullName>
    <label>Opportunity Lost Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>