bbss218/force-app/main/default/objects/Opportunity/fields/Practice_Group__c.field-meta.xml
<CustomField>
    <fullName>Practice_Group__c</fullName>
    <label>Practice Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Enterprise Solutions</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>PMO</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>Cloud &amp; Devops</fullName>
            </value>
            <value>
                <fullName>Web Development</fullName>
            </value>
            <value>
                <fullName>Mobile Development</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>.NET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>