bbss218/force-app/main/default/objects/Opportunity/fields/Practice_Head__c.field-meta.xml
<CustomField>
    <fullName>Practice_Head__c</fullName>
    <label>Practice Head</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vikram kattamreddy</fullName>
            </value>
            <value>
                <fullName>Dawei Zhuang</fullName>
            </value>
            <value>
                <fullName>Yuhan Lin</fullName>
            </value>
            <value>
                <fullName>Francesco</fullName>
            </value>
            <value>
                <fullName>Abhilash Gaddam</fullName>
            </value>
            <value>
                <fullName>Siva Sugali</fullName>
            </value>
            <value>
                <fullName>Chandra Shekhar Pasarti</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>