bbss218/force-app/main/default/objects/Opportunity/fields/Pre_sales_Head__c.field-meta.xml
<CustomField>
    <fullName>Pre_sales_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre-sales Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>