bbss218/force-app/main/default/objects/Opportunity/fields/Presentation_deck_link__c.field-meta.xml
<CustomField>
    <fullName>Presentation_deck_link__c</fullName>
    <label>Presentation deck link</label>
    <type>Url</type>
</CustomField>