bbss218/force-app/main/default/objects/Opportunity/fields/Proposal_document_link__c.field-meta.xml
<CustomField>
    <fullName>Proposal_document_link__c</fullName>
    <label>Proposal document link</label>
    <type>Url</type>
</CustomField>