bbss218/force-app/main/default/objects/Opportunity/fields/QnA_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>QnA_Submission_Date__c</fullName>
    <label>QnA Submission Date</label>
    <type>Date</type>
</CustomField>