bbss218/force-app/main/default/objects/Opportunity/fields/Solution_Design_Link__c.field-meta.xml
<CustomField>
    <fullName>Solution_Design_Link__c</fullName>
    <label>Solution Design Link</label>
    <type>Url</type>
</CustomField>