bbss218/force-app/main/default/objects/Opportunity/fields/Solution_Presentation_Date__c.field-meta.xml
<CustomField>
    <fullName>Solution_Presentation_Date__c</fullName>
    <label>Solution Presentation Date</label>
    <type>Date</type>
</CustomField>