bbss218/force-app/main/default/objects/Opportunity/fields/Stage_Aging__c.field-meta.xml
<CustomField>
    <fullName>Stage_Aging__c</fullName>
    <formula>IF(
ISBLANK(Stage_Change_Date__c),
(TODAY() - DATEVALUE(CreatedDate)),
(TODAY() - Stage_Change_Date__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Aging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>