bbss218/force-app/main/default/objects/Opportunity/fields/Won_Against__c.field-meta.xml
<CustomField>
    <fullName>Won_Against__c</fullName>
    <label>Won Against</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>