bbss218/force-app/main/default/objects/Opportunity/recordTypes/Default.recordType-meta.xml
<RecordType>
    <fullName>Default</fullName>
    <active>true</active>
    <businessProcess>Default</businessProcess>
    <label>Default</label>
</RecordType>