bbss218/force-app/main/default/objects/Opportunity/recordTypes/Solution.recordType-meta.xml
<RecordType>
    <fullName>Solution</fullName>
    <active>true</active>
    <businessProcess>Opportunity Solutions</businessProcess>
    <label>Solution</label>
</RecordType>