bbss218/force-app/main/default/objects/Opportunity/recordTypes/Staffing.recordType-meta.xml
<RecordType>
    <fullName>Staffing</fullName>
    <active>true</active>
    <businessProcess>Opportunity Staffing</businessProcess>
    <label>Staffing</label>
</RecordType>