bbss218/force-app/main/default/objects/Opportunity/validationRules/Check_Presales_Fields_Capability_Call.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Presales_Fields_Capability_Call</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Opportunity_Type__c, &quot;Fixed Bid&quot;),
        ISPICKVAL(Opportunity_Type__c, &quot;Managed Services&quot;)
    ),
    OR(
        ISPICKVAL(StageName, &quot;Solution Design&quot;),
        ISPICKVAL(StageName, &quot;Proposal&quot;),
        ISPICKVAL(StageName, &quot;Solution Presentation&quot;)
    ),
    OR(
        ISBLANK(High_Level_Requirements__c),
        ISBLANK(QnA_Submission_Date__c),
        ISBLANK(Expected_Design_Date__c),
        ISBLANK(Solution_Presentation_Date__c),
        ISBLANK(Practice_Group__c),
        ISBLANK(Practice_Head__c),
        ISBLANK(Solution_Design_Link__c)
    )
)</errorConditionFormula>
    <errorMessage>&quot;Please complete all Presales Detail fields before moving to Further Stages&quot;</errorMessage>
</ValidationRule>