bbss218/force-app/main/default/objects/Opportunity/validationRules/No_OnHold_Abort_From_Later_Stages.validationRule-meta.xml
<ValidationRule>
    <fullName>No_OnHold_Abort_From_Later_Stages</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
  ISCHANGED(StageName),
  OR(
    ISPICKVAL(StageName, &quot;On Hold&quot;),
    ISPICKVAL(StageName, &quot;Abort&quot;)
  ),
  OR(
    ISPICKVAL(PRIORVALUE(StageName), &quot;Proposal&quot;),
    ISPICKVAL(PRIORVALUE(StageName), &quot;Solution Presentation&quot;)
  ),
  $Profile.Id &lt;&gt; &quot;00egK000001qs5N&quot;
)</errorConditionFormula>
    <errorMessage>&quot;Cannot move to On Hold or Abort from Proposal or Solution Presentation stage.&quot;</errorMessage>
</ValidationRule>