bbss218/force-app/main/default/objects/Opportunity/validationRules/Pre_Sales_Restrict_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Pre_Sales_Restrict_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     $Profile.Id =&quot;00egK000001qs5N&quot;, 
    ISPICKVAL(StageName, &quot;Aborted&quot;) ||
    ISPICKVAL(StageName, &quot;On Hold&quot;) ||
    ISPICKVAL(StageName, &quot;Closed Won&quot;) ||
    ISPICKVAL(StageName, &quot;Closed Lost&quot;)
)</errorConditionFormula>
    <errorMessage>&quot;Pre Sales Head is not allowed to move Opportunities to closed stages.&quot;</errorMessage>
</ValidationRule>