bbss218/force-app/main/default/objects/Opportunity/validationRules/PresalesHead_Field_Restrictions.validationRule-meta.xml
<ValidationRule>
    <fullName>PresalesHead_Field_Restrictions</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     $Profile.Id = &apos;00egK000001qs5N&apos;,
    OR(
        ISCHANGED(Amount),
        ISCHANGED(AccountId),
        ISCHANGED(OwnerId),
        ISCHANGED( Name ),
        ISCHANGED(CloseDate)
        
    )
)</errorConditionFormula>
    <errorMessage>&quot;You are only allowed to Edit Presales_Related fields.&quot;</errorMessage>
</ValidationRule>