bbss218/force-app/main/default/objects/Opportunity/validationRules/Proposal_Proposal_document_link.validationRule-meta.xml
<ValidationRule>
    <fullName>Proposal_Proposal_document_link</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Proposal&quot;),
    ISBLANK(Proposal_document_link__c)
)</errorConditionFormula>
    <errorMessage>&quot;Please provide the Proposal Document Link when moving to Proposal stage.&quot;</errorMessage>
</ValidationRule>