bbss218/force-app/main/default/objects/Opportunity/validationRules/Reason_is_required_For_Close_Aborted.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_is_required_For_Close_Aborted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Aborted&quot;),
    ISBLANK( Aborted_Reason__c )
)</errorConditionFormula>
    <errorMessage>&quot;Please provide the Aborted Reason when moving to Closed : Aborted Stage stage.&quot;</errorMessage>
</ValidationRule>