bbss218/force-app/main/default/objects/Opportunity/validationRules/Reason_is_required_For_Close_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_is_required_For_Close_Lost</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Closed Lost&quot;),
    ISBLANK(   Lost_Against__c )
)</errorConditionFormula>
    <errorMessage>&quot;Please provide the Lost Against Information when moving to Closed Lost Stage.&quot;</errorMessage>
</ValidationRule>