bbss218/force-app/main/default/objects/Opportunity/validationRules/Reason_is_required_For_Close_OnHold.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_is_required_For_Close_OnHold</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;On Hold&quot;),
    ISBLANK(  On_Hold_Reason__c )
)</errorConditionFormula>
    <errorMessage>&quot;Please provide the On Hold Reason when moving to Closed : On Hold Stage.&quot;</errorMessage>
</ValidationRule>