bbss218/force-app/main/default/objects/Opportunity/validationRules/Ristrict_Pre_Sales_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Ristrict_Pre_Sales_Fields</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
        $Profile.Id &lt;&gt; &apos;00egK000001qs5N&apos;,    
    
        ISCHANGED(Pre_sales_Head__c)
        
    
)</errorConditionFormula>
    <errorMessage>Only Pre-Sales Head Can Edit Pre-Sales Details</errorMessage>
</ValidationRule>