bbss218/force-app/main/default/objects/Opportunity/validationRules/Solution_Presentation_Document_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Solution_Presentation_Document_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName, &quot;Solution Presentation&quot;),
    ISBLANK(Presentation_deck_link__c)
)</errorConditionFormula>
    <errorMessage>&quot;Please provide the Presentation Document Link when moving to Solution Presentation stage.&quot;</errorMessage>
</ValidationRule>